Ember project setup

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "coocloudshlack",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for coocloudshlack goes here",
+  "description": "Anything coocloud apps related",
   "repository": "",
   "license": "MIT",
   "author": "",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^0.7.0",
+    "babel-eslint": "^10.0.1",
     "broccoli-asset-rev": "^3.0.0",
     "ember-ajax": "^5.0.0",
     "ember-cli": "~3.10.0",
@@ -31,6 +32,7 @@
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-tailwind": "^0.7.0",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-data": "~3.10.0",
